--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "node-vim-inspector": "./bin/node-vim-inspector.js"
+    "node-vim-inspector": "./bin/vim-inspector.js"
   },
   "repository": {
     "type": "git",
